resolve overflow no modal de posts

--- a/public/css/admin-lista-de-posts.css
+++ b/public/css/admin-lista-de-posts.css
@@ -13,6 +13,8 @@ body {
     align-items: center;
 }
 
+
+
 .sdbar {
     padding-left: 1%;
 }
@@ -373,7 +375,7 @@ table th {
     flex-direction: column;
     gap: 40px;
     flex-wrap: nowrap;
-
+    overflow-x: hidden;
 }
 
 .fecha {
